<resources>
    <string name="app_name">Rock-Paper-Scissors</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="win">WIN</string>
    <string name="lose">LOSE</string>
    <string name="draw">DRAW</string>
    <string name="newgame">New Game</string>
    <string name="botChoose">BOT CHOOSE</string>
    <string name="yourChoose">YOUR CHOOSE</string>
</resources>